feat: add GitHub Issues to website CMS workflow
Implements a complete content management system using GitHub Issues as the
single source of truth for project data on the Awana Labs website.

Features:
- Fetches issues with 'publish:yes' label from GitHub API
- Parses issue Markdown into structured project JSON
- Updates public/projects.json with parsed project data
- GitHub Actions workflow runs daily and on manual dispatch

Components added:
- scripts/fetch-projects.ts: GitHub API fetcher with pagination
- scripts/parse-issue.ts: Markdown parser for issue body sections
- .github/workflows/fetch-projects.yml: Automated workflow
- e2e/projects.spec.ts: E2E tests for projects display
- Updated package.json with fetch:projects script

First project published:
- CoMapeo Config Spreadsheet Plugin (Issue #2)
- Organization: Digital Democracy (digidem)
- Status: active, widely-used

Technical improvements:
- Fixed regex state mutation bug in parser
- Added required field validation
- Enhanced section extraction accuracy
- Updated Playwright config for correct preview server paths

Related to: GitHub Issue #2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:e2e:install": "playwright install --with-deps"
+    "test:e2e:install": "playwright install --with-deps",
+    "fetch:projects": "bun scripts/fetch-projects.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
