feat: auto-fetch projects when issues are created or modified
The fetch-projects workflow now triggers automatically on:
- Issue opened
- Issue edited
- Issue closed
- Label added
- Label removed

This ensures the website stays in sync with GitHub Issues CMS
without requiring manual workflow triggers or waiting for daily runs.

--- a/.github/workflows/fetch-projects.yml
+++ b/.github/workflows/fetch-projects.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * *" # Runs daily at 00:00 UTC
+  issues:
+    types: [opened, edited, closed, labeled, unlabeled]
 
 permissions:
   contents: write
