fix: trigger deploy when fetch-projects completes
The Deploy workflow now triggers when Fetch Projects Data completes,
fixing the issue where site updates weren't deploying after
fetch-projects pushed new projects.json.

GitHub Actions by default doesn't trigger workflows from commits
made by github-actions[bot] (security feature). Using workflow_run
as a trigger ensures the deploy runs after fetch-projects succeeds.

Flow: Issue created → fetch-projects → commit → workflow_run → deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Fetch Projects Data"]
+    types:
+      - completed
+    branches:
+      - main
 
 permissions:
   contents: read
