fix: revert Tailwind CSS to v3, keep other dependency upgrades
This commit reverts the Tailwind v4 migration while preserving all other
dependency upgrades (React 19, React Router 7, Vite 7, etc.).

Changes:
- Reverted tailwindcss from v4.1.18 to v3.4.19 (devDependencies)
- Removed @tailwindcss/postcss plugin
- Reverted postcss.config.js to use standard tailwindcss plugin
- Reverted src/index.css from Tailwind v4 (@import/@theme) to v3
  (@tailwind directives with HSL color variables)
- Added .gitignore entries for Playwright and verification screenshots

All non-Tailwind package upgrades are preserved:
- React 18.3.1 → 19.2.4
- React Router 6.30.1 → 7.13.0
- Vite 5.4.19 → 7.3.1
- @vitejs/plugin-react-swc 3.11.0 → 4.2.3
- date-fns 3.6.0 → 4.1.0
- recharts 2.15.4 → 3.7.0
- zod 3.25.76 → 4.3.6
- Many other dependency updates

Testing:
✅ Build succeeds (npm run build)
✅ Unit tests pass (npm run test)
✅ E2E tests pass (40/40 Chromium tests)
✅ Preview server works correctly

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Playwright
+playwright-report/
+test-results/
+
+# Verification screenshots (root level only)
+*.png
+!public/*.png
+!src/**/*.png
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
