docs: add project guidelines and verification scripts
- Add AGENTS.md with repository guidelines (commands, stack, structure)
- Add CLAUDE.md for Claude Code context
- Add e2e test for verifying project display
- Add three verification scripts (site, detailed, final)
- Update .gitignore to exclude VERIFICATION_REPORT.md

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ test-results/
 !public/*.png
 !src/**/*.png
 
+# Verification reports
+VERIFICATION_REPORT.md
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
