feat: replace GitHub and Lovable images with Unsplash images
This commit updates all project images to use Unsplash for better
reliability and professional appearance. The changes include:

- Update public/projects.json: Replace raw.githubusercontent.com image
  URLs with Unsplash images for both CoMapeo projects
- Update index.html: Replace Lovable opengraph images with Unsplash
- Update e2e/projects.spec.ts: Update test assertion to check for
  unsplash.com instead of logo.png
- Add docs/UNSPLASH_IMAGE_UPDATES.md: Document all changes and note
  which GitHub issues need to be updated (#2 and #3)

Updated projects:
- Issue #2: CoMapeo Config Spreadsheet Plugin
- Issue #3: CoMapeo Documentation

GitHub issues to update: #2, #3 (see documentation for details)

--- a/public/projects.json
+++ b/public/projects.json
@@ -25,10 +25,10 @@
         "Tutorials"
       ],
       "media": {
-        "logo": "https://raw.githubusercontent.com/digidem/comapeo-docs/main/docs/logo.png",
+        "logo": "https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=400&h=400&fit=crop",
         "images": [
-          "https://raw.githubusercontent.com/digidem/comapeo-docs/main/docs/screenshot-home.png",
-          "https://raw.githubusercontent.com/digidem/comapeo-docs/main/docs/screenshot-guides.png"
+          "https://images.unsplash.com/photo-1576157180154-8d6b5610d2b7?w=1200&h=800&fit=crop",
+          "https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?w=1200&h=800&fit=crop"
         ]
       },
       "links": {
@@ -66,10 +66,10 @@
         "Offline Tools"
       ],
       "media": {
-        "logo": "https://raw.githubusercontent.com/digidem/comapeo-config-spreadsheet-plugin/main/docs/logo.png",
+        "logo": "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400&h=400&fit=crop",
         "images": [
-          "https://raw.githubusercontent.com/digidem/comapeo-config-spreadsheet-plugin/main/docs/screenshot-1.png",
-          "https://raw.githubusercontent.com/digidem/comapeo-config-spreadsheet-plugin/main/docs/screenshot-2.png"
+          "https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?w=1200&h=800&fit=crop",
+          "https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=1200&h=800&fit=crop"
         ]
       },
       "links": {
